# scaling-cbs-under-mup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: another_example.py  coord_check.py  download_dataset.py  generate_configs.py  grid_search.py  hpo_tune.py  logs_to_csv.py  model.yaml  modify_configs.py  multi_scale_rs.py  mup_example.py  neps_example.py  neps_run_samir.py  plot_results.py  run.py  run_configs.py  run_folder.py  save_model_base_shape.py  select_neps.py  simple_example.py  width32.bsh
scales/: SlurmManager.py  __init__.py  args.py  config_utils.py  custom_pipeline.py  data_utils.py  eval_pipeline.py  eval_utils.py  log_utils.py  lr_utils.py  main.py  model.py  neps_utils.py  pipeline_config.py  pretrain_pipeline.py  refactored_pretrain.py  tblog_utils.py  utils.py
scales/config/: ConfigWrapper.py  __init__.py  base_config.py  data_config.py  eval_config.py  log_args.py  train_config.py  utils.py  yaml_utils.py
scales/exp_utils/: PipelineFactory.py  SlurmManager.py
scales/models/: base_gp.py
scripts/: grid_search.yaml  hpo_neps.py  run_glr_array.py
scripts/plotting/: cbs_illustration.py  mup_val_cbs.py
